Criação de todo front/back e configuração das regras de negocio e funcionalidades.

--- a/MauiAppEventos/MauiAppEventos.csproj
+++ b/MauiAppEventos/MauiAppEventos.csproj
@@ -72,6 +72,12 @@
 	  <MauiXaml Update="Views\CadastroEventos.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\EventoCadastrado.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Sobre.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
